--- a/lab01/[higaki]-bio.html
+++ b/lab01/[higaki]-bio.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>"[Dianna Higaki] – Bio <title>
+        <title>Dianna Higaki–Bio</title>
     </head>
 
     <body>
