completed lab 2 (edits)

--- a/lab02/higaki-bio.html
+++ b/lab02/higaki-bio.html
@@ -15,14 +15,13 @@
                 <li>InDesign</li>
                 <li>Illustrator</li>
                 <li>Premiere Pro</li>
-            </ul> <br>I also have knowledge in:
+            </ul>I also have knowledge in:
             <ul>
                 <li>Facebook Ads Manager</li>
                 <li>SEO</li>
                 <li>Influencer Outreach</li>
             </ul> 
         </p>
-     
     <h2>Personal Information</h2>
     <p>Outside of work, I have a very long list of interests and hobbies.
     </p>
