completed lab 2 (edits)

--- a/lab02/higaki-bio.html
+++ b/lab02/higaki-bio.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
     <head>
         <meta charset="utf-8">
@@ -23,7 +24,8 @@
             </ul> 
         </p>
     <h2>Personal Information</h2>
-    <p>Outside of work, I have a very long list of interests and hobbies.
+    <p>
+        Outside of work, I have a very long list of interests and hobbies.
     </p>
     <p>
         I enjoy art related tasks such as drawing, painting, and graphic design. <br>I have future aspirations of designing my own stickers, so I can start a side hustle or small business one day. <br> I also love binging detective shows on Netflix, like Criminal Minds, and learning about the human psyche.
