completed lab 2 (final edits)

--- a/lab02/higaki-bio.html
+++ b/lab02/higaki-bio.html
@@ -33,6 +33,6 @@
         Soccer has been a part of my life since I was young, and this drew me to try out for and join the women's club soccer team here at Syracuse. <br>And as far a music goes, I listen to anything and everything from RnB to EDM to Korean Pop. 
     </p>
     <hr>
-    &copy;
+    &copy;2022
     </body>
 </html>
